hphp/hack/test/typecheck/modules/module_declaration_within_module.php
<?hh
new module foo {} // not ok
module foo;
new module bar {} // not ok
